# ModTemplate

./: README.md  build.py  package_name.txt
FridaBridge/: _.js  index.ts  package.json  tsconfig.json
TemplateModMenu/: .gitignore  README.md  build.gradle  gradle.properties
TemplateModMenu/app/: build.gradle
TemplateModMenu/app/src/main/: AndroidManifest.xml
TemplateModMenu/app/src/main/java/com/android/support/: Menu.java
TemplateModMenu/app/src/main/jni/: .clang-format  Android.mk  Application.mk  CMakeLists.txt  Main.cpp
TemplateModMenu/app/src/main/jni/Frida/: frida-gum-example.c  frida-gum.h
TemplateModMenu/app/src/main/jni/Frida/armeabi-v7a/: frida-gum-example.c  frida-gum.h
TemplateModMenu/app/src/main/jni/Frida/gumpp/: interceptor.cpp  invocationcontext.hpp  invocationlistener.cpp  objectwrapper.hpp  returnaddress.cpp  runtime.cpp
TemplateModMenu/app/src/main/jni/Il2cpp/: Il2cpp.cpp  Il2cpp.h  il2cpp-api-functions.h  il2cpp-class.cpp  il2cpp-class.h  log.h
TemplateModMenu/app/src/main/jni/Il2cpp/xdl/: xdl.c  xdl_iterate.c  xdl_linker.c  xdl_lzma.c
TemplateModMenu/app/src/main/jni/Includes/: Logger.cpp  Logger.h  Macros.h  Utils.cpp  Utils.h
TemplateModMenu/app/src/main/jni/Menu/: ImGui.cpp  ImGui.h  Menu.cpp  Menu.h  Setup.cpp  Setup.h
TemplateModMenu/app/src/main/jni/frida/gumpp/: backtracer.cpp  interceptor.cpp
TemplateModMenu/app/src/main/jni/imgui/backends/: imgui_impl_android.cpp
TemplateModMenu/scripts/: build.sh  build2.sh  get_file.sh  get_package.sh  get_path.sh  last_out.txt  lvim  out.txt  restart.sh  send_to_phone.sh  start_process.sh  stop_process.sh  watch.sh
